--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,13 @@
 .parent{
- position: relative;
  height: 200px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 .item{
- position: absolute;
+ background-color: #56D19D;
  height: 50px;
- width: 200px;
- top: 50%;
- left: 50%;
- transform: translate(-50%,-50%);
+}
+.big{
+ height: 80px;
 }
